# jua-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: check-commit.yml  checks-reusable.yml  create-release.yml  publish.yml  run-examples-manual.yml  run-examples-on-approval.yml
docs/source/: conf.py  index.rst
docs/source/_ext/: __init__.py  function_sig.py
examples/: helios_europa_snapshots.py
examples/market_aggregates/: market_aggregates_example.ipynb  market_aggregates_example.py
examples/market_data/: market_data_example.py  plot_market_data.py  query_actuals.py
examples/power_forecast/: plot_day_ahead_timeseries.py  plot_power_forecast.py  power_forecast_example.py
examples/weather/: compare_forecast_for_location.ipynb  europe_forecast_delta.ipynb  extreme_event_detector.ipynb  forecast.py  forecast_europe.py  forecast_global.py  forecast_helios_valid_time_grid.py  forecast_multiple_models.py  forecast_raw_data.py  forecast_solar_runs_comparison.py  hindcast.py  poll_new_forecasts.py
jua/: _api.py  client.py  logging.py
jua/_utils/: dataset.py  optional_progress_bar.py  remove_none_from_dict.py  spinner.py
jua/errors/: api_errors.py  jua_error.py  model_errors.py
jua/scripts/: auth.py
jua/settings/: authentication.py  jua_settings.py
jua/types/: geo.py
jua/types/weather/: _api_payload_types.py  _api_response_types.py  forecast.py  weather.py
jua/weather/: _api.py  _jua_dataset.py  _model.py  _model_meta.py  _weather.py  _xarray_patches.py  conversions.py  file_access.py  forecast.py  hindcast.py  models.py  variables.py
jua/weather/_types/: api_payload_types.py
src/jua/: _api.py  _retry.py  client.py  logging.py
src/jua/_utils/: dataset.py
src/jua/market_aggregates/: __init__.py  energy_market.py  market_aggregates.py  variables.py
src/jua/market_data/: __init__.py  _entsoe.py  _frame.py  _mapping.py  _uk_power.py  market_data.py
src/jua/power_forecast/: __init__.py  power_forecast.py
src/jua/scripts/: auth.py
src/jua/settings/: jua_settings.py
src/jua/types/: geo.py
tests/: test_retry.py
tests/functional/: __init__.py  test_data_consistency.py  test_forecasts.py  test_lazy_loading.py  test_market_aggregates.py  test_market_data.py  test_power_forecast.py
tests/market_data/: test_mapping.py  test_market_data.py
tests/power_forecast/: test_day_ahead_timeseries.py  test_get_init_times.py  test_versioning.py
tests/settings/: test_authentication.py  test_jua_settings.py
tests/types/: test_geo.py  test_run_definition.py
tests/weather/: test_aifs_ens_meta.py  test_hrrr_europa_meta.py  test_lazy_cache.py  test_lazy_loading_backend.py  test_model.py  test_temporal_resolution.py  test_watcher.py  test_xarray_patches.py  utils.py
(+24 files in other folders)
