[project]
name = "jua-python-sdk"
version = "0.1.0"
description = "Access Jua's API with ease"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "dask>=2025.4.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "s3fs>=2025.3.2",
    "types-requests>=2.32.0.20250328",
    "xarray>=2025.4.0",
    "zarr>=3.0.0",
]


[project.scripts]
jua = "jua.scripts.jua:main"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.8.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
