[project]
name = "jua-python-sdk"
version = "0.1.0"
description = "Access Jua's API with ease"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "dask>=2025.4.1",
    "fsspec>=2025.3.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250328",
    "xarray>=2025.4.0",
    "zarr>=3.0.0",
]


[project.scripts]
jua = "jua.scripts.jua:main"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.8.0",
]
examples = [
    "ipykernel>=6.29.5",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "rust-just>=1.40.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jua"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
